--- a/no.html
+++ b/no.html
@@ -338,7 +338,7 @@
                                                 <h5 class="card-title material-bad">Lead</h5>
                                                 <p class="card-text material-bad"><b>Source:</b> The most common sources of lead in drinking water are lead pipes, faucets, and plumbing fixtures.</p>
                                                 <p class="card-text material-bad"><b>Violation:</b><br> Average Level: 17ppb<br> Action Level: 15 ppb<br> Goal: 0.2ppb</p>
-                                                <a href="https://prattsavi.github.io/DrinkingWater/single" target="_blank" style="color: black;position:absolute;bottom:10px;"> <i class="fa fa-caret-down" aria-hidden="true"></i></a>
+                                                <a href="https://prattsavi.github.io/DrinkingWater/Lead.html" target="_blank" style="color: black;position:absolute;bottom:10px;"> <i class="fa fa-caret-down" aria-hidden="true"></i></a>
                                             </div>
                                         </div>
                                     </div>
