--- a/yes.html
+++ b/yes.html
@@ -247,6 +247,11 @@
         #verdict {
             height: 120px;
         }
+        
+        #initial {
+            margin-left: 135px;
+            margin-right: 135px;
+        }
     </style>
 
     <title>Drinking Water!</title>
@@ -265,6 +270,17 @@
             <p id="answer">Yes!</p>
             <p id="answer-bg">Yes!</p>
         </div>
+
+        <div class="row d-flex mt-2 mb-0">
+            <div class="col-lg-12">
+                <div id="initial">
+                    <p id='text-def'>
+                        Tap water in our area is safe to drink. Learn more about the testing conducted in the chart below.
+                    </p>
+                </div>
+            </div>
+        </div>
+
 
         <!--Accordion Starts Here-->
         <div class="row d-flex justify-content-center mt-0">
@@ -492,6 +508,26 @@
                                     </div>
 
                                 </div>
+
+                            </div>
+                        </div>
+                    </div>
+
+                    <!--Protecting Clean Water and How You Can Help-->
+                    <div class="card">
+                        <div class="card-header p-0 mt-1" id="headingOne">
+                            <h2 class="mb-0">
+                                <a class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">Protecting Clean Water and How You Can Help <i class="material-icons">add</i></a>
+                            </h2>
+                            <hr width="750px" size="5">
+                        </div>
+                        <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
+                            <div class="card-body ml-0">
+
+                                <p id='text-def'>
+                                    Lorem ipsum dolor sit amet, cons ectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex
+                                    ea commodo consequat.
+                                </p>
 
                             </div>
                         </div>
