--- a/index.html
+++ b/index.html
@@ -156,8 +156,7 @@
             <div class="row d-flex  mt-5 ml-3 mr-0">
 
                 <p id='text-def'>
-                    This site is a prototype design that uses dummy or made-up data to demonstrate the possible functions of a proposed tool to reimagine Consumer Confidence Reports about drinking water quality in the US. It does not represent the real state of NYC water
-                    which is very safe and clean.
+                    This site is a prototype design that uses made-up data to demonstrate a proposed tool to reimagine Consumer Confidence Reports about drinking water quality in the US. It does not represent the real state of NYC water which is very safe and clean.
                 </p>
 
             </div>
