--- a/no.html
+++ b/no.html
@@ -512,13 +512,13 @@
 
                     <!--Protecting Clean Water and How You Can Help-->
                     <div class="card">
-                        <div class="card-header p-0 mt-1" id="headingOne">
+                        <div class="card-header p-0 mt-1" id="headingFour">
                             <h2 class="mb-0">
-                                <a class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">Protecting Clean Water and How You Can Help <i class="material-icons">add</i></a>
+                                <a class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">Protecting Clean Water and How You Can Help <i class="material-icons">add</i></a>
                             </h2>
                             <hr width="750px" size="5">
                         </div>
-                        <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
+                        <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordionExample">
                             <div class="card-body ml-0">
 
                                 <p id='text-def'>
