--- a/index.html
+++ b/index.html
@@ -157,6 +157,8 @@
 
                 <p id='text-def'>
                     This site is a prototype design that uses made-up data to demonstrate a proposed tool to reimagine Consumer Confidence Reports about drinking water quality in the US. It does not represent the real state of NYC water which is very safe and clean.
+                    <br><br>Please enter <b>11222</b> to view a "Yes!" page and<br> <b>11223</b> to view a "No!" page.
+
                 </p>
 
             </div>
